--- a/other/pure_u1/c_code/Makefile
+++ b/other/pure_u1/c_code/Makefile
@@ -1,5 +1,5 @@
-FILES.c = control.c utils.c
-FILES.h = lattice.h utils.h
+FILES.c = control.c utils.c action.c
+FILES.h = lattice.h utils.h action.h
 FILES.o = ${FILES.c:.c=.o}
 
 pure_u1 : $(FILES.o)
