--- a/other/pure_phi4/generation/Makefile
+++ b/other/pure_phi4/generation/Makefile
@@ -2,11 +2,11 @@ FILES.c = control.c utils.c action.c
 FILES.h = lattice.h utils.h action.h
 FILES.o = ${FILES.c:.c=.o}
 
-scalar : $(FILES.o)
-	gcc -o scalar $(FILES.o) -lm
+pure_phi4 : $(FILES.o)
+	gcc -o pure_phi4 $(FILES.o) -lm
 
 $(FILES.o) : $(FILES.h)
- 
+
 .PHONY : clean
 clean :
-	rm -r scalar $(FILES.o)
+	rm -r pure_phi4 $(FILES.o)
